--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,8 @@
 name: SonarQube Analysis
-
-on:
-  pull_request:
-    branches:
-      - main
+on: push
 
 jobs:
+
   sonarqube-analysis:
     name: SonarQube Analysis
     runs-on: ubuntu-latest
@@ -13,7 +10,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
+        with: 
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
