--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,5 +2,5 @@ sonar.projectKey=Spuchifai
 sonar.projectName=Spuchifai
 sonar.projectVersion=1.0
 sonar.sources=src
-sonar.exclusions=src/*.css
+sonar.exclusions=**/*
 sonar.scm.disabled=true
