--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=Spuchifai
-sonar.projectName=Spuchifai
+sonar.projectKey=Spuchifai2
+sonar.projectName=Spuchifai2
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.exclusions=**/*
