--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=Spuchifai
 sonar.projectName=Spuchifai
 sonar.projectVersion=1.0
 sonar.sources=src
-sonar.exclusions=src
+sonar.exclusions=src/*.css
 sonar.scm.disabled=true
 sonar.analysisCache.enabled=false
