--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
             -Dsonar.projectKey=my_project_key
             -Dsonar.organization=my_organization
             -Dsonar.sources=src
-            -Dsonar.host.url=https://sonarqube.example.com
+            -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }}
             -Dsonar.login=${{ secrets.SONAR_TOKEN }}
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
