--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,14 +34,21 @@ jobs:
       # Check the Quality Gate status.
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
-        uses: sonarsource/sonarqube-quality-gate-action@master
-        # Force to fail step after specific time.
-        timeout-minutes: 5
+        run: |
+          # Guardar la URL del reporte del análisis en una variable
+          report_url=$(cat .scannerwork/report-task.txt)
+
+          # Realizar la solicitud al servidor de SonarQube para obtener el estado del Quality Gate
+          quality_gate_status=$(curl -s -u "${SONAR_TOKEN}": "${SONAR_HOST_URL}/api/qualitygates/project_status" -d "projectKey=Spuchifai" -d "analysisId=${report_url}" | jq -r '.projectStatus.status')
+
+          # Mostrar el estado del Quality Gate
+          echo "Quality Gate status is: $quality_gate_status"
+
+          # Evaluar si el estado es "ERROR" o "NONE" para fallar en caso de ser necesario
+          if [ "$quality_gate_status" == "ERROR" ] || [ "$quality_gate_status" == "NONE" ]; then
+            echo "Quality Gate failed or not set, failing the step..."
+            exit 1
+          fi
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-
-      # Optionally, you can use the output from the Quality Gate in another step.
-      # The possible outputs of the `quality-gate-status` variable are `PASSED`, `WARN`, or `FAILED`.
-      - name: Show SonarQube Quality Gate Status
-        run: echo "The Quality Gate status is ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
