--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,6 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-        curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '{{SONAR_HOST_URL}}/api/qualitygates/project_status?projectKey=Spuchifai'
+        curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{SONAR_HOST_URL}}/api/qualitygates/project_status?projectKey=Spuchifai'
         cat quality-gate.json
 
-    # Optionally you can use the output from the Quality Gate in another step.
-    # The possible outputs of the `quality-gate-status` variable are `PASSED`, `WARN` or `FAILED`.
-    - name: "Example show SonarQube Quality Gate Status value"
-      run: echo "The Quality Gate status is ${{ steps.sonarqube-quality-gate-check.outputs.quality-gate-status }}"
