--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,6 @@ jobs:
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
-        curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{SONAR_HOST_URL}}/api/qualitygates/project_status?projectKey=Spuchifai'
+        curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{secrets.SONAR_HOST_URL}}/api/qualitygates/project_status?projectKey=Spuchifai'
         cat quality-gate.json
 
