--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,13 @@
-sonar.projectKey=Spuchifai
-sonar.organization=Spuchifai
-sonar.projectName=Spuchifai
-sonar.projectVersion=1.0
-sonar.sources=src
-sonar.exclusions=src/*.css
-sonar.scm.disabled=true
-sonar.analysisCache.enabled=false
+sonar.projectKey=Alefleitas_SpuchifaiApp
+sonar.organization=alefleitas
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=SpuchifaiApp
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
