update sonar-properties y main.yml

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,2 @@
-sonar.projectKey=Spuchifai
-sonar.projectName=Spuchifai
-sonar.projectVersion=1.0
-sonar.sources=src
-sonar.exclusions=src/*.css
-sonar.scm.disabled=true
-sonar.analysisCache.enabled=false
+sonar.projectKey=Alefleitas_SpuchifaiApp
+sonar.organization=alefleitas
