--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,7 @@
-sonar.projectKey=Alefleitas_SpuchifaiApp
-sonar.organization=alefleitas
-
+sonar.projectKey=Spuchifai
+sonar.projectName=Spuchifai
+sonar.projectVersion=1.0
+sonar.sources=src
+sonar.exclusions=src/*.css
+sonar.scm.disabled=true
+sonar.analysisCache.enabled=false
