--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,22 @@ jobs:
         SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
     - name: Get SonarQube Quality Gate Status
+      id: sonarqube_status
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: |
         curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=Spuchifai'
-        cat quality-gate.json
+        echo '::set-output name=status::$(cat quality-gate.json)'
+
+    - name: Comment SonarQube Quality Gate Status on PR
+      uses: actions/github-script@v5
+      with:
+        script: |
+          const status = `SonarQube Quality Gate Status:\n${steps.sonarqube_status.outputs.status}`;
+          github.issues.createComment({
+            issue_number: context.issue.number,
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            body: status
+          });
+
