--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,7 +33,9 @@ jobs:
         run: |
           echo "SonarQube Quality Gate Status:\n$(cat quality-gate.json)" > pr_comment.txt
           gh pr comment ${{ github.event.number }} --body "$(cat pr_comment.txt)"
-          
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Install action-automatic-releases
         uses: marvinpinto/action-automatic-releases@latest
 
