--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,8 @@ on:
       - master
   pull_request:
     types: [opened, synchronize, reopened]
+    branches:
+      - master
 
 name: Main Workflow
 
