--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,20 +29,12 @@ jobs:
           echo '::set-output name=status::$(cat quality-gate.json)'
 
       - name: Comment SonarQube Quality Gate Status on PR
-        uses: actions/github-script@v5
+        uses: thollander/actions-comment-pull-request@v2
         with:
-          script: |
-            const fs = require('fs');
-            const body = fs.readFileSync('quality-gate.json', 'utf-8');
-            github.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: `SonarQube Quality Gate Status:\n\`\`\`\n${body}\n\`\`\``
-            });
+          message: |
+            SonarQube Quality Gate Status:
+            ```
+            $(cat quality-gate.json)
+            ```
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Install action-automatic-releases
-        uses: marvinpinto/action-automatic-releases@latest
