--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,13 +28,8 @@ jobs:
           curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=Spuchifai'
           echo '::set-output name=status::$(cat quality-gate.json)'
 
-      - name: Comment SonarQube Quality Gate Status on PR
+      - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            SonarQube Quality Gate Status:
-            ```
-            $(cat quality-gate.json)
-            ```
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            Hello world ! :wave:
