--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,14 +21,18 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - name: Get SonarQube Quality Gate Status
+        id: sonarqube_status
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           curl -X GET -u "${SONAR_TOKEN}": -o quality-gate.json '${{ secrets.SONAR_HOST_URL }}/api/qualitygates/project_status?projectKey=Spuchifai'
-          cat quality-gate.json
+          echo "::set-output name=status::$(cat quality-gate.json)"
 
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            Hello world ! :wave:
+            Sonarqube Quality Gate | Project Status:
+            ```
+            ${{ steps.sonarqube_status.outputs.status }}
+            ```
